--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>ru.kpfu.itis.group11501.Shatin</groupId>
-    <artifactId>TheoryOfComplexityPj</artifactId>
+    <groupId>ru.kpfu.itis.group11501</groupId>
+    <artifactId>euclidnets</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <url>http://maven.apache.org</url>
